syntax = "proto3";
package protos;

//protoc --go_out=plugins=grpc:. xx.proto
message FindUserByMobileRequest {
    string mobile = 1;
}

message IntegralResponse {
    int64 userId = 1;
    int64 integral = 2;
}

message AddIntegralRequest {
    int64 userId = 1;
    int64 integral = 2;
}
message ConsumerIntegralRequest {
    int64 userId = 1;
    int64 consumerIntegral = 2;
}
message FindOneByUserIdRequest {
    int64 userId = 1;
}
service IntegralRpc {
    rpc AddIntegral (AddIntegralRequest) returns (IntegralResponse);
    rpc ConsumerIntegral (ConsumerIntegralRequest) returns (IntegralResponse);
    rpc FindOneByUserId (FindOneByUserIdRequest) returns (IntegralResponse);
}